# sqlite_cmake_task

./: Dockerfile
source/: CMakeLists.txt
